# oryvex

./: README.fa.md  README.md  ee.py  oryvex.sh  py.py
.github/workflows/: build.yml  release.yml
Docs/: GUIDE.en.md
oryvex/: Cargo.toml
oryvex/src/: account.rs  aethernoize.rs  config.rs  dns.rs  error.rs  main.rs  masque.rs  masque_h2.rs  netstack.rs  prober.rs  quic.rs  socks.rs  tls.rs  wg_prober.rs  wireguard.rs
oryvex/src/gui/: app.rs  mod.rs  styles.rs  widgets.rs
